# kernel_embedding_dictionary

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  REVIEW.md  pyproject.toml
.github/workflows/: codecov.yml  formatting.yml  tests.yml
demo/: bq_demo.ipynb  ke_demo.ipynb
kernel_embedding_dictionary/: __init__.py  _get_embedding.py  helper_functions.py  utils.py
kernel_embedding_dictionary/embeddings/: __init__.py  embedding.py  mean_funcs.py  mean_funcs_1d.py  utils.py  var_funcs_1d.py
kernel_embedding_dictionary/kernels/: __init__.py  expquad_kernel.py  kernel.py  kernel_funcs.py  kernel_funcs_1d.py  matern12_kernel.py  matern13_kernel.py  matern32_kernel.py  matern52_kernel.py  matern72_kernel.py  matern_kernel.py  wendland0_kernel.py  wendland2_kernel.py  wendland4_kernel.py
kernel_embedding_dictionary/measures/: __init__.py  gaussian_measure.py  lebesgue_measure.py  measure.py
tests/: test_get_embedding.py
tests/kernel_embedding_dictionary/embeddings/: compute_credible_intervals.py  compute_mean_intervals.py  test_embedding.py  test_embedding_values.py  test_embeddings.py  test_expected_kmeans.py  test_kernel_embedding.py  test_mean_values_expquad.py  test_mean_values_matern.py  test_mean_values_matern12.py  test_mean_values_matern32.py  test_mean_values_matern52.py  test_mean_values_matern72.py  test_mean_values_wendland0.py  test_mean_values_wendland2.py
tests/kernel_embedding_dictionary/kernels/: test_expquad_kernel.py  test_kernels.py  test_kernels_uni.py  test_matern12_kernel.py  test_matern32_kernel.py  test_matern52_kernel.py  test_matern72_kernel.py  test_matern_kernel.py  test_wendland0_kernel.py  test_wendland2_kernel.py  test_wendland4_kernel.py
tests/kernel_embedding_dictionary/measures/: test_gaussian_measure.py  test_lebesgue_measure.py  test_measures.py
