[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

################################################################################
# Project                                                     #
################################################################################

[project]
name = "kernel_embedding_dictionary"
version = "0.0.1"
authors = [
  { name="The KED authors"},
#  { name="The KED authors", email="author@example.com" },
]
description = "A Python package for kernel embeddings."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = {text = "MIT"}
#license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/mmahsereci/kernel_embedding_dictionary"
Issues = "https://github.com/mmahsereci/kernel_embedding_dictionary/issues"

[project.optional-dependencies]
dev = [
    "pytest>=3.5.1",
    "pytest-cov>=2.5.1",
    "mock>=2.0.0",
    "flake8>=3.5.0",
    "isort>=5.10",
    "black>22.1",
    "coverage>=4.5.1",
    "codecov>=2.0.15",
]

################################################################################
# Formatting                                                     #
################################################################################

[tool.black]
line-length = 120
include = '\.py$'
#extend-exclude = 'doc\/.*'

[tool.isort]
profile = 'black'
skip_gitignore = true
line_length = 120
#skip_glob = 'doc/*'

